--- a/styles/banner.css
+++ b/styles/banner.css
@@ -2,7 +2,10 @@
     background-color:  var(--azul-degrade);
     display: flex;
     justify-content: center;
+    color: white;
+    padding: 40px;
 }
+
 
 .banner__titulo{
     font-size: 18px;
@@ -16,4 +19,9 @@
 
 .banner__pesquisa{
     background-color: var(--azul-degrade);
+    border: 1px solid var(--branco);
+    color: var(--branco);
+    border-radius: 24px;
+    padding: 1em;
+    width: 100%;
 }
