--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+@import url("styles/header.css")
+
+
 :root {
     --preto: #000000;
     --fonte-principal:'Poppin', 'sans serif' ;
-    --branco: #FFFFFF
-    --azul
+    --branco: #FFFFFF;
+    --azul-degrade: linear-gradient(97,54deg, #002f52 35.49 #326589 165.37%);
+    --azul: #002F52;
+    --laranja: #EB9800;
 }
 
 body {
