--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("styles/header.css")
+@import url("styles/header.css");
 
 
 :root {
     --preto: #000000;
-    --fonte-principal:'Poppin', 'sans serif' ;
+    --fonte-principal:'Poppins', 'sans serif' ;
     --branco: #FFFFFF;
-    --azul-degrade: linear-gradient(97,54deg, #002f52 35.49 #326589 165.37%);
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --azul: #002F52;
     --laranja: #EB9800;
 }
